--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,22 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'com.google.android.material:material:1.0.0-rc02'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
     // Room components
-    implementation 'androidx.room:room-runtime:2.0.0-rc01'
-    kapt 'androidx.room:room-compiler:2.0.0-rc01'
-    androidTestImplementation 'androidx.room:room-testing:2.0.0-rc01'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha05'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha05'
+    androidTestImplementation 'androidx.room:room-testing:2.1.0-alpha05'
 
     // Lifecycle components
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03'
 
     implementation 'com.pawegio.kandroid:kandroid:0.8.8@aar'
 }
